--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
 # PORT = 8000
+CONNECTION_STRING = 'mongodb+srv://raviluhaniwal318:ZElVoJDwr5XJvdMz@cluster0.us8usk1.mongodb.net/quickbuy?retryWrites=true&w=majority&appName=Cluster0'
 # MONGO_URL = "mongodb+srv://raviluhaniwal318:ZElVoJDwr5XJvdMz@cluster0.us8usk1.mongodb.net/chatapp?retryWrites=true&w=majority&appName=Cluster0"
 JWT_SECRET = "ravikumar3108"
